--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"chart.js": "^4.4.1",
+		"chartjs-adapter-moment": "^1.0.1",
+		"moment": "^2.30.1",
 		"tauri-xhr": "^0.1.2"
 	}
 }
