--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.4", features = ["http-all"] }
+tauri = { version = "1.5.4", features = [ "dialog-all", "clipboard-write-text", "fs-read-file", "fs-write-file", "http-all"] }
 reqwest = { version = "0.11.24", features = ["blocking"] }
 error-chain = "0.12.4"
 thiserror = "1.0.57"
