--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tauri-apps/api": "^1.5.3",
 		"chart.js": "^4.4.1",
 		"chartjs-adapter-moment": "^1.0.1",
 		"moment": "^2.30.1",
+		"tauri-settings": "^0.3.4",
 		"tauri-xhr": "^0.1.2"
 	}
 }
